# SwiftWasmer

./: .gitignore  README.md  compileRustToXCFramework.sh
MacOS/: MacOSApp.swift
RustWasmer/: Cargo.toml  build.rs
RustWasmer/headers/: RustWasmer.h
RustWasmer/src/: lib.rs  memory_default.rs  memory_dynamic.rs  memory_static_limited.rs
SharedModule/: ContentView.swift  Package.swift  SwiftWasmerApp.swift
SharedModule/Sources/SharedModule/Resources/: memory.wasm
SharedModule/Sources/SharedModule/Rust/: RustWasmer.swift  SwiftBridgeCore.swift
SharedModule/Sources/SharedModule/UI/: SwiftWasmerView.swift
SharedModule/Sources/SharedModule/View/: SwiftWasmerView.swift
SharedModule/Sources/SharedModule/ViewModel/: SwiftWasmerViewModel.swift
SwiftWasmer.xcodeproj/: project.pbxproj
iOS/: iOSApp.swift
iOS App Clip/: iOSAppClipApp.swift  iOS_App_Clip.entitlements
libRustWasmer.xcframework/: Info.plist
libRustWasmer.xcframework/ios-arm64-simulator/Headers/: BridgingHeader.h  RustWasmer.h
libRustWasmer.xcframework/ios-arm64/Headers/: RustWasmer.h
libRustWasmer.xcframework/macos-arm64/Headers/: RustWasmer.h  module.modulemap
