[package]
name = "RustWasmer"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1.52"

[dependencies]
swift-bridge = "0.1.52"
wasmer = { version = "4.2.4" , default-features = false, features = ["sys", "cranelift"]}
wasmer-compiler-cranelift = "4.2.4"
wat = "1.0.82"
